working on chat application
constructed some structure for the chat function

--- a/Experiments/yung-hsuehs_experiments/exp-2/initial-boot-app/src/main/resources/static/index.html
+++ b/Experiments/yung-hsuehs_experiments/exp-2/initial-boot-app/src/main/resources/static/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <head>
-  <link rel="stylesheet" href="listVisualizationStyle.css" type="text/css">
+  <link rel="stylesheet" href="index.css" type="text/css">
 </head>
 </head>
 <body>
@@ -18,7 +18,7 @@
 <ul id="unorderedList">
 </ul>
 
-<script type="text/javascript" src="listVisualizationScript.js"></script>
+<script type="text/javascript" src="index.js"></script>
 
 </body>
 </html>
